--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Pazoria</title>
 <head>
 <body>
-<img src="pwb.jpg" alt="we'll be back soon!">
+<img src="pwb.jpg" alt="we'll be back soon!" width="1920px" height="1080px">
 </body>
 </html>
