--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Pazoria</title>
+<link rel="stylesheet" href="main.css">
 <head>
 <body>
 <img src="pwb.jpg" alt="we'll be back soon!" width="1920px" height="1080px">
