--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ body, html {
   margin: 0;
 }
 
-.bg {
-  /* The image used */
+body {
   background-image: url("pwb.jpg");
+}
 
   /* Full height */
   height: 100%; 
@@ -23,8 +23,6 @@ body, html {
 </style>
 </head>
 <body>
-
-<div class="bg"></div>
 
 </body>
 </html>
